Investigating performance problems. Code not working.

--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -158,9 +158,9 @@
                     <chart:VerticalLineAnnotation  Stroke="Blue" StrokeThickness="2" CanDrag="True" ShowToolTip="True" ToolTipContent="Measure difference" Name="MouldingDelayVLine1"  DragCompleted="MouldingDelayVLine1_DragCompleted" CoordinateUnit="Pixel" X1="20"></chart:VerticalLineAnnotation>
                     <chart:VerticalLineAnnotation Stroke="Blue" StrokeThickness="2" CanDrag="True" ShowToolTip="True" ToolTipContent="Measure difference" Name="MouldingDelayVLine2" DragCompleted="MouldingDelayVLine2_DragCompleted" CoordinateUnit="Pixel" X1="50"></chart:VerticalLineAnnotation>
                 </chart:SfChart.Annotations>
-                <chart:LineSeries  Name="Series_Delay_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
+              <!--  <chart:FastLineSeries  Name="Series_Delay_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:FastLineSeries>
                 <chart:StepLineSeries Name="Series_Delay_TRetForecasted" LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:StepLineSeries>
-            </chart:SfChart>
+          -->  </chart:SfChart>
             <!-- Make a textbox overlay the grid above-->
             <TextBox Name="PhaseDiffResult" Grid.Row="2" Background="Yellow" BorderThickness="0" Grid.Column="2" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="Diff = 5"></TextBox>
 
@@ -200,7 +200,7 @@
             <chart:SfChart.Legend>
                     <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
             </chart:SfChart.Legend>
-                <chart:FastLineBitmapSeries Name="Series_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
+             <!--   <chart:FastLineBitmapSeries Name="Series_TRetActual" LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_THotTank" LegendIcon="Diamond" Label="THotTank"  XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_TColdTank" LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TColdTank"  ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_THotBuffer" LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
@@ -213,7 +213,7 @@
                 <chart:FastLineBitmapSeries Name="Series_PowerHeating" LegendIcon="Diamond" Label="PowerHeating"   XBindingPath="ElapsedTime" YBindingPath="PowerHeating" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries Name="Series_THeaterOilOut" LegendIcon="Diamond" Label="THeaterOilOut"  XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries Name="Series_TRetForecasted" LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"/>
-
+-->
             </chart:SfChart>
 
             <!-- overlaying Button for Export -->
@@ -293,10 +293,10 @@
                 </chart:SfChart.Annotations>
 
                 <!-- Want to show a trendline for the mid buffer temperature could not find howto -->
-                <chart:LineSeries Name="Series_VB_THotBuffer" LegendIcon="InvertedTriangle" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries Name="Series_VB_TMidBuffer" LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries Name="Series_VB_TColdBuffer" LegendIcon="Triangle" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
-            </chart:SfChart>
+          <!--      <chart:FastLineSeries Name="Series_VB_THotBuffer" LegendIcon="InvertedTriangle" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:FastLineSeries>
+                <chart:FastLineSeries Name="Series_VB_TMidBuffer" LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:FastLineSeries>
+                <chart:FastLineSeries Name="Series_VB_TColdBuffer" LegendIcon="Triangle" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:FastLineSeries>
+          -->  </chart:SfChart>
 
             <!-- energy balance chart -->
             <chart:SfChart  
@@ -327,11 +327,11 @@
                     <chart:HorizontalLineAnnotation Name="HLineSet_ThresholdCold2Hot" ShowToolTip="True"  Stroke="DarkBlue" StrokeThickness="2" CanDrag="True"  DragCompleted="HLineSet_ThresholdCold2Hot_Dragged" CoordinateUnit="Axis"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
                 <!-- Return Valve not yet simulated showing another curve -->
-                <chart:LineSeries Name="Series_EB_TRetActual" LegendIcon="Diamond"  Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries Name="Series_EB_THotTank" LegendIcon="Diamond"  Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries Name="Series_EB_TColdTank" LegendIcon="Diamond"  Label="TColdTank" XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:FastLineSeries Name="Series_EB_TRetActual" LegendIcon="Diamond"  Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:FastLineSeries>
+                <chart:FastLineSeries Name="Series_EB_THotTank" LegendIcon="Diamond"  Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:FastLineSeries>
+                <chart:FastLineSeries Name="Series_EB_TColdTank" LegendIcon="Diamond"  Label="TColdTank" XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:FastLineSeries>
                 <chart:StepLineSeries Name="Series_EB_ValveReturn" LegendIcon="Circle"  Label="ValveReturn" XBindingPath="ElapsedTime" YBindingPath="ValveReturn" ItemsSource="{Binding power}"></chart:StepLineSeries>
-            </chart:SfChart>
+           </chart:SfChart>
         </Grid>
 
     </ScrollViewer>
