--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -8,111 +8,114 @@
     xmlns:chart="using:Syncfusion.UI.Xaml.Charts"
     mc:Ignorable="d">
     <ScrollViewer>
-        <Grid  Name="mainGrid" >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="40"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height="20"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height ="40" ></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height ="50"></RowDefinition>
-            <RowDefinition Height ="35"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition Height ="40"></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="2*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        
-        <Grid.DataContext>
-            <local:LineChartViewModel/>
-        </Grid.DataContext>
-        <!--  Operation -->
-        <TextBlock  Grid.Row="0" Text="Operation" FontWeight="Bold" VerticalAlignment="Bottom"></TextBlock>
-        <TextBlock Text="Running mode" Grid.Row="1" HorizontalAlignment="Left"></TextBlock>
-        <ComboBox x:Name ="RunningModeCombo" Grid.Row="1" Grid.Column="1" SelectionChanged="NewModeSelected"/>
+         <Grid  Name="mainGrid" >
+            <Grid.DataContext>
+                <local:LineChartViewModel/>
+            </Grid.DataContext>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height ="40" ></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height ="50"></RowDefinition>
+                <RowDefinition Height ="35"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition Height ="40"></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="2*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <ProgressRing x:Name="mainGridProgresRing"/>
+
+            <!--  Operation -->
+            <TextBlock  Grid.Row="0" Text="Operation" FontWeight="Bold" VerticalAlignment="Bottom"></TextBlock>
+            <TextBlock Text="Running mode" Grid.Row="1" HorizontalAlignment="Left"></TextBlock>
+            <ComboBox x:Name ="RunningModeCombo" Grid.Row="1" Grid.Column="1" SelectionChanged="NewModeSelected"/>
             
-        <TextBlock Text="Tool tempering" Grid.Row="2" HorizontalAlignment="Left"></TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column="1" Name="TextBlock_ToolTempering" Text="Not Yet Working" Foreground="Olive"></TextBlock>
-        <Button Grid.Row="1"  Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Name="Button_Freeze_Run" Content="Freeze" Click="Button_Freeze_Run_Click"></Button>
+            <TextBlock Text="Tool tempering" Grid.Row="2" HorizontalAlignment="Left"></TextBlock>
+            <TextBlock Grid.Row="2" Grid.Column="1" Name="TextBlock_ToolTempering" Text="Not Yet Working" Foreground="Olive"></TextBlock>
+            <Button Grid.Row="1"  Grid.RowSpan="2" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Right" Name="Button_Freeze_Run" Content="Freeze" Click="Button_Freeze_Run_Click"></Button>
 
-        <!--  Moulding Parameters -->
-        <TextBlock Grid.Row="3"  FontWeight="Bold" Text="Moulding parameters" VerticalAlignment="Bottom"></TextBlock>
-        <StackPanel Orientation="Horizontal" Grid.Row="4" >
-                <TextBlock VerticalAlignment="Bottom" Text="Tank temperature"></TextBlock>
-                <TextBlock VerticalAlignment="Bottom" Name="TextCorF"></TextBlock>
-         </StackPanel>
-            <StackPanel Grid.Row="4"  VerticalAlignment="Bottom" Grid.Column="1" Orientation="Horizontal">
-                <TextBlock Margin="5,0,0,0"  Text="T"></TextBlock>
-                <TextBlock Margin="1,7,0,0" FontSize="11" Text="Actual "></TextBlock>
-                <TextBlock Margin="31,0,0,0" Text="T"></TextBlock>
-                <TextBlock Margin="1,7,0,0" FontSize="11" Text="Set"></TextBlock>
-        </StackPanel>
-        
-        <StackPanel Grid.Row="5" Orientation="Horizontal" VerticalAlignment="Bottom">
-            <TextBlock Text="Hot tank"></TextBlock>
-        </StackPanel>
-
-        <StackPanel Grid.Row="5" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal">
-                <TextBox Name="TextBox_THotTank" IsReadOnly="True" BorderThickness="0" Background="White" Text="210"/>
-                <TextBox IsReadOnly="True" Margin="15,0,0,0" Text="220" Name="NewTHotTankTextBox"  GotFocus="NewTHotTankTextBox_GotFocus"/>
+            <!--  Moulding Parameters -->
+            <TextBlock Grid.Row="3"  FontWeight="Bold" Text="Moulding parameters" VerticalAlignment="Bottom"></TextBlock>
+            <StackPanel Orientation="Horizontal" Grid.Row="4" >
+                    <TextBlock VerticalAlignment="Bottom" Text="Tank temperature"></TextBlock>
+                    <TextBlock VerticalAlignment="Bottom" Name="TextCorF"></TextBlock>
+             </StackPanel>
+                <StackPanel Grid.Row="4"  VerticalAlignment="Bottom" Grid.Column="1" Orientation="Horizontal">
+                    <TextBlock Margin="5,0,0,0"  Text="T"></TextBlock>
+                    <TextBlock Margin="1,7,0,0" FontSize="11" Text="Actual "></TextBlock>
+                    <TextBlock Margin="31,0,0,0" Text="T"></TextBlock>
+                    <TextBlock Margin="1,7,0,0" FontSize="11" Text="Set"></TextBlock>
             </StackPanel>
         
-        <TextBlock Grid.Row="6" VerticalAlignment="Bottom" Text="Cold tank"></TextBlock>
-        <StackPanel Grid.Row="6" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal">
-                <TextBox Name="TextBox_TColdTank" IsReadOnly="True" BorderThickness="0" Text="20"></TextBox>
-                <TextBox Margin="15,0,0,0" IsReadOnly="True" Name="NewTColdTankTextBox" GotFocus="NewTColdTankTextBox_GotFocus"  Text="25"></TextBox>
-        </StackPanel>
+            <StackPanel Grid.Row="5" Orientation="Horizontal" VerticalAlignment="Bottom">
+                <TextBlock Text="Hot tank"></TextBlock>
+            </StackPanel>
 
-        <!--  Cycle Times -->
-        <TextBlock Grid.Row="7" VerticalAlignment="Bottom" Text="Cycle times (s/cycle)"></TextBlock>
-                     
-        <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <TextBlock Margin="1,0,0,0"  Text="Active"></TextBlock>
-                <TextBlock Margin="35,0,0,0" Text="Pause"></TextBlock>
-        </StackPanel>
+            <StackPanel Grid.Row="5" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal">
+                    <TextBox Name="TextBox_THotTank" IsReadOnly="True" BorderThickness="0" Background="White" Text="210"/>
+                    <TextBox IsReadOnly="True" Margin="15,0,0,0" Text="220" Name="NewTHotTankTextBox"  GotFocus="NewTHotTankTextBox_GotFocus"/>
+                </StackPanel>
         
-        <TextBlock Grid.Row="8"  VerticalAlignment="Bottom" Text="Heating"></TextBlock>
-        <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <TextBox Name="TextBox_NewActiveHeatingTime" GotFocus="NewActiveHeatingTimeTextBox_GotFocus" IsReadOnly="True" VerticalAlignment="Bottom" Text="10"></TextBox>
-                <TextBox Name="TextBox_NewPauseHeatingTime" GotFocus="NewPauseHeatingTimeTextBox_GotFocus" IsReadOnly="True" Margin="15,0,0,0" Text="10"></TextBox>
-        </StackPanel>
+            <TextBlock Grid.Row="6" VerticalAlignment="Bottom" Text="Cold tank"></TextBlock>
+            <StackPanel Grid.Row="6" Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal">
+                    <TextBox Name="TextBox_TColdTank" IsReadOnly="True" BorderThickness="0" Text="20"></TextBox>
+                    <TextBox Margin="15,0,0,0" IsReadOnly="True" Name="NewTColdTankTextBox" GotFocus="NewTColdTankTextBox_GotFocus"  Text="25"></TextBox>
+            </StackPanel>
+
+            <!--  Cycle Times -->
+            <TextBlock Grid.Row="7" VerticalAlignment="Bottom" Text="Cycle times (s/cycle)"></TextBlock>
+                     
+            <StackPanel Grid.Row="7" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+                    <TextBlock Margin="1,0,0,0"  Text="Active"></TextBlock>
+                    <TextBlock Margin="35,0,0,0" Text="Pause"></TextBlock>
+            </StackPanel>
+        
+            <TextBlock Grid.Row="8"  VerticalAlignment="Bottom" Text="Heating"></TextBlock>
+            <StackPanel Grid.Row="8" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+                    <TextBox Name="TextBox_NewActiveHeatingTime" GotFocus="NewActiveHeatingTimeTextBox_GotFocus" IsReadOnly="True" VerticalAlignment="Bottom" Text="10"></TextBox>
+                    <TextBox Name="TextBox_NewPauseHeatingTime" GotFocus="NewPauseHeatingTimeTextBox_GotFocus" IsReadOnly="True" Margin="15,0,0,0" Text="10"></TextBox>
+            </StackPanel>
        
-        <TextBlock Grid.Row="9" VerticalAlignment="Bottom" Text="Cooling"></TextBlock>
-        <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
-                <TextBox Name="TextBox_NewActiveCoolingTime" GotFocus="NewActiveCoolingTimeTextBox_GotFocus" IsReadOnly="True" VerticalAlignment="Bottom" Text="10"></TextBox>
-                <TextBox Name="TextBox_NewPauseCoolingTime" GotFocus="NewPauseCoolingTimeTextBox_GotFocus"  IsReadOnly="True" Margin="15,0,0,0" Text="10"></TextBox>
-        </StackPanel>
+            <TextBlock Grid.Row="9" VerticalAlignment="Bottom" Text="Cooling"></TextBlock>
+            <StackPanel Grid.Row="9" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom">
+                    <TextBox Name="TextBox_NewActiveCoolingTime" GotFocus="NewActiveCoolingTimeTextBox_GotFocus" IsReadOnly="True" VerticalAlignment="Bottom" Text="10"></TextBox>
+                    <TextBox Name="TextBox_NewPauseCoolingTime" GotFocus="NewPauseCoolingTimeTextBox_GotFocus"  IsReadOnly="True" Margin="15,0,0,0" Text="10"></TextBox>
+            </StackPanel>
 
-        <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Monitoring" FontWeight="Bold"></TextBlock>
+            <TextBlock Grid.Row="10" VerticalAlignment="Bottom" Text="Monitoring" FontWeight="Bold"></TextBlock>
 
-        <!--  Delay times -->
-        <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2">
-                <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return</TextBlock>
-        </StackPanel>
+            <!--  Delay times -->
+            <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2">
+                    <TextBlock Margin="30,0,0,0" > Tempering delay time Feed-to-Return</TextBlock>
+            </StackPanel>
             
-        <TextBlock Margin="0,0,0,0" Grid.Row="2" Grid.Column="4"> Calibrate + Tune = Total</TextBlock>
+            <TextBlock Margin="0,0,0,0" Grid.Row="2" Grid.Column="4"> Calibrate + Tune = Total</TextBlock>
 
-            <TextBlock VerticalAlignment="Bottom"  Margin="30,0,0,0" Grid.Row="3" Grid.Column="3" Text="Hot pump"></TextBlock>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,30,0" Grid.Row="3" Grid.Column="4">
-                <TextBlock  Name="TextBlock_HotCalibrate" VerticalAlignment="Bottom" Margin="0,0,0,0" Text="88"></TextBlock>
-                <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
-                <TextBox Name="HotFeedToReturnDelayCalTime" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" VerticalAlignment="Bottom" Margin="10,0,0,0" Text="22"></TextBox>
-                <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
-                <TextBlock Name="TextBlock_SumHotDelayTime" VerticalAlignment="Bottom" Margin="5,0,0,0" Text="110"></TextBlock>
-                <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
-        </StackPanel>
+                <TextBlock VerticalAlignment="Bottom"  Margin="30,0,0,0" Grid.Row="3" Grid.Column="3" Text="Hot pump"></TextBlock>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,0,30,0" Grid.Row="3" Grid.Column="4">
+                    <TextBlock  Name="TextBlock_HotCalibrate" VerticalAlignment="Bottom" Margin="0,0,0,0" Text="88"></TextBlock>
+                    <TextBlock  VerticalAlignment="Bottom" Margin="5,0,0,0" Text="+"></TextBlock>
+                    <TextBox Name="HotFeedToReturnDelayCalTime" GotFocus="HotFeedToReturnDelayCalTime_GotFocus" TextChanged="HotFeedToReturnDelayCalTime_TextChanged" IsReadOnly="True" VerticalAlignment="Bottom" Margin="10,0,0,0" Text="22"></TextBox>
+                    <TextBlock  VerticalAlignment="Bottom" Margin="10,0,0,0" Text="="></TextBlock>
+                    <TextBlock Name="TextBlock_SumHotDelayTime" VerticalAlignment="Bottom" Margin="5,0,0,0" Text="110"></TextBlock>
+                    <TextBlock Margin="8,0,0,0" VerticalAlignment="Bottom" Text="(s)"></TextBlock>
+            </StackPanel>
 
             <TextBlock  Margin="30,0,0,0" VerticalAlignment="Bottom" Grid.Row="4" Grid.Column="3" Text="Cold pump"></TextBlock>
         <StackPanel HorizontalAlignment="Left" Orientation="Horizontal" Margin="0,0,30,0" Grid.Row="4" Grid.Column="4">
@@ -134,15 +137,19 @@
             IsDoubleTapEnabled="True"   
             DoubleTapped="FreezeDelayChart"
             Margin="20,0,0,0">
+                
                 <chart:SfChart.PrimaryAxis> 
                     <chart:TimeSpanAxis Name="OperatorDelayXAxis" ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
+                
                 <chart:SfChart.Behaviors>
                     <chart:ChartTrackBallBehavior LabelDisplayMode="NearestPoint" ></chart:ChartTrackBallBehavior>
                 </chart:SfChart.Behaviors>
                 <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
+                    
+                 <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
+                
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Name="MyYAxis"  StartRangeFromZero="False" Interval="20"  EnableAutoIntervalOnZooming="False">
                         <chart:NumericalAxis.StripLines>
@@ -309,9 +316,9 @@
                 <chart:SfChart.PrimaryAxis>
                     <chart:TimeSpanAxis ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
-                <chart:SfChart.Behaviors>
+                <!-- chart:SfChart.Behaviors>
                     <chart:ChartTrackBallBehavior LabelDisplayMode="NearestPoint" ></chart:ChartTrackBallBehavior>
-                </chart:SfChart.Behaviors>
+                </ -->
                 <chart:SfChart.Legend>
                     <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
